# fast_api

./: docker-compose.yml  exceptions.py  main.py  pyproject.toml
