[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["ukastsiukevich <grun_gespenst@tut.by>"]
readme = "README.md"
packages = [{include = "fast_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.6"
uvicorn = "^0.33.0"
passlib = "^1.7.4"
flake8 = "^7.1.1"
python-multipart = "^0.0.20"
PyJWT = "^2.10.1"
SQLAlchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
